DLP2015-2016v3/bin/sintactico/y.output
   0  $accept : program $end

   1  program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN

   2  dectypes : dectypes decstruct
   3           | decstruct

   4  decstruct : STRUCT IDENT defvarstructs ENDSTRUCT

   5  defvarstructs : defvarstructs defparamstruct
   6                | defparamstruct

   7  defparamstruct : defvariables

   8  decvariables : decvariables defvariables
   9               | defvariables

  10  defvariables : tipo identifierList ';'

  11  decfunciones : decfunciones decfuncion
  12               | decfuncion

  13  decfuncion : FUNCTION IDENT '(' parametosfunc ')' AS tipo cuerpofuncion ENDFUNCTION

  14  parametosfunc : listaparam
  15                |

  16  listaparam : tipo identifierList

  17  identifierList : tipoArray IDENT
  18                 | IDENT
  19                 | identifierList ',' IDENT
  20                 | identifierList ',' tipoArray IDENT

  21  tipoArray : tipoArray '[' LITERALINT ']'
  22            | '[' LITERALINT ']'

  23  tipo : INTEGER
  24       | REAL
  25       | CHARACTER
  26       | STRUCT IDENT
  27       | VOID

  28  cuerpofuncion : defvariablesLocales sentenciasOpcionales

  29  defvariablesLocales : defvariablesLocales defvariables
  30                      |

  31  sentenciasOpcionales : listaSentencias
  32                       |

  33  listaSentencias : listaSentencias sentencia
  34                  | sentencia

  35  sentencia : condicional
  36            | bucle
  37            | print
  38            | WRITE '(' ListaExpresion ')' ';'
  39            | asignacion
  40            | IDENT '(' listaExpresionOpcional ')' ';'
  41            | retorno

  42  retorno : RETURN '(' expresion ')' ';'

  43  asignacion : expresion '=' expresion ';'

  44  print : READ '(' ListaExpresion ')' ';'

  45  bucle : WHILE '(' expresion ')' sentenciasOpcionales ENDWHILE

  46  condicional : IF '(' expresion ')' THEN sentenciasOpcionales ENDIF
  47              | IF '(' expresion ')' THEN sentenciasOpcionales ELSE sentenciasOpcionales ENDIF

  48  listaExpresionOpcional : ListaExpresion
  49                         |

  50  ListaExpresion : ListaExpresion ',' expresion
  51                 | expresion

  52  expresion : expresion '+' expresion
  53            | expresion '-' expresion
  54            | expresion '*' expresion
  55            | expresion '/' expresion
  56            | expresion '%' expresion
  57            | expresion GREATERTHAN expresion
  58            | expresion LOWERTHAN expresion
  59            | expresion EQUALS expresion
  60            | expresion NOTEQUALS expresion
  61            | expresion AND expresion
  62            | expresion OR expresion
  63            | '-' expresion
  64            | expresion GREATEREQUALS expresion
  65            | expresion LOWEREQUALS expresion
  66            | IDENT '(' listaExpresionOpcional ')'
  67            | NOT expresion
  68            | expresion '[' expresion ']'
  69            | expresion '.' IDENT
  70            | '(' tipo ')' expresion
  71            | LITERALREAL
  72            | LITERALINT
  73            | CHAR
  74            | IDENT

state 0
	$accept : . program $end  (0)

	TYPES  shift 1
	.  error

	program  goto 2


state 1
	program : TYPES . dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN  (1)

	STRUCT  shift 3
	.  error

	dectypes  goto 4
	decstruct  goto 5


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	decstruct : STRUCT . IDENT defvarstructs ENDSTRUCT  (4)

	IDENT  shift 6
	.  error


state 4
	program : TYPES dectypes . GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN  (1)
	dectypes : dectypes . decstruct  (2)

	GLOBALS  shift 7
	STRUCT  shift 3
	.  error

	decstruct  goto 8


state 5
	dectypes : decstruct .  (3)

	.  reduce 3


state 6
	decstruct : STRUCT IDENT . defvarstructs ENDSTRUCT  (4)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	VOID  shift 13
	.  error

	defvarstructs  goto 14
	defparamstruct  goto 15
	defvariables  goto 16
	tipo  goto 17


state 7
	program : TYPES dectypes GLOBALS . decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN  (1)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	VOID  shift 13
	.  error

	decvariables  goto 18
	defvariables  goto 19
	tipo  goto 17


state 8
	dectypes : dectypes decstruct .  (2)

	.  reduce 2


state 9
	tipo : INTEGER .  (23)

	.  reduce 23


state 10
	tipo : REAL .  (24)

	.  reduce 24


state 11
	tipo : CHARACTER .  (25)

	.  reduce 25


state 12
	tipo : STRUCT . IDENT  (26)

	IDENT  shift 20
	.  error


state 13
	tipo : VOID .  (27)

	.  reduce 27


state 14
	decstruct : STRUCT IDENT defvarstructs . ENDSTRUCT  (4)
	defvarstructs : defvarstructs . defparamstruct  (5)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	ENDSTRUCT  shift 21
	VOID  shift 13
	.  error

	defparamstruct  goto 22
	defvariables  goto 16
	tipo  goto 17


state 15
	defvarstructs : defparamstruct .  (6)

	.  reduce 6


state 16
	defparamstruct : defvariables .  (7)

	.  reduce 7


state 17
	defvariables : tipo . identifierList ';'  (10)

	IDENT  shift 23
	'['  shift 24
	.  error

	identifierList  goto 25
	tipoArray  goto 26


state 18
	program : TYPES dectypes GLOBALS decvariables . PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN  (1)
	decvariables : decvariables . defvariables  (8)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	PROCEDURES  shift 27
	VOID  shift 13
	.  error

	defvariables  goto 28
	tipo  goto 17


state 19
	decvariables : defvariables .  (9)

	.  reduce 9


state 20
	tipo : STRUCT IDENT .  (26)

	.  reduce 26


state 21
	decstruct : STRUCT IDENT defvarstructs ENDSTRUCT .  (4)

	.  reduce 4


state 22
	defvarstructs : defvarstructs defparamstruct .  (5)

	.  reduce 5


state 23
	identifierList : IDENT .  (18)

	.  reduce 18


state 24
	tipoArray : '[' . LITERALINT ']'  (22)

	LITERALINT  shift 29
	.  error


state 25
	defvariables : tipo identifierList . ';'  (10)
	identifierList : identifierList . ',' IDENT  (19)
	identifierList : identifierList . ',' tipoArray IDENT  (20)

	';'  shift 30
	','  shift 31
	.  error


state 26
	identifierList : tipoArray . IDENT  (17)
	tipoArray : tipoArray . '[' LITERALINT ']'  (21)

	IDENT  shift 32
	'['  shift 33
	.  error


state 27
	program : TYPES dectypes GLOBALS decvariables PROCEDURES . decfunciones MAIN '(' ')' listaSentencias ENDMAIN  (1)

	FUNCTION  shift 34
	.  error

	decfunciones  goto 35
	decfuncion  goto 36


state 28
	decvariables : decvariables defvariables .  (8)

	.  reduce 8


state 29
	tipoArray : '[' LITERALINT . ']'  (22)

	']'  shift 37
	.  error


state 30
	defvariables : tipo identifierList ';' .  (10)

	.  reduce 10


state 31
	identifierList : identifierList ',' . IDENT  (19)
	identifierList : identifierList ',' . tipoArray IDENT  (20)

	IDENT  shift 38
	'['  shift 24
	.  error

	tipoArray  goto 39


state 32
	identifierList : tipoArray IDENT .  (17)

	.  reduce 17


state 33
	tipoArray : tipoArray '[' . LITERALINT ']'  (21)

	LITERALINT  shift 40
	.  error


state 34
	decfuncion : FUNCTION . IDENT '(' parametosfunc ')' AS tipo cuerpofuncion ENDFUNCTION  (13)

	IDENT  shift 41
	.  error


state 35
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones . MAIN '(' ')' listaSentencias ENDMAIN  (1)
	decfunciones : decfunciones . decfuncion  (11)

	FUNCTION  shift 34
	MAIN  shift 42
	.  error

	decfuncion  goto 43


state 36
	decfunciones : decfuncion .  (12)

	.  reduce 12


state 37
	tipoArray : '[' LITERALINT ']' .  (22)

	.  reduce 22


state 38
	identifierList : identifierList ',' IDENT .  (19)

	.  reduce 19


state 39
	identifierList : identifierList ',' tipoArray . IDENT  (20)
	tipoArray : tipoArray . '[' LITERALINT ']'  (21)

	IDENT  shift 44
	'['  shift 33
	.  error


state 40
	tipoArray : tipoArray '[' LITERALINT . ']'  (21)

	']'  shift 45
	.  error


state 41
	decfuncion : FUNCTION IDENT . '(' parametosfunc ')' AS tipo cuerpofuncion ENDFUNCTION  (13)

	'('  shift 46
	.  error


state 42
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN . '(' ')' listaSentencias ENDMAIN  (1)

	'('  shift 47
	.  error


state 43
	decfunciones : decfunciones decfuncion .  (11)

	.  reduce 11


state 44
	identifierList : identifierList ',' tipoArray IDENT .  (20)

	.  reduce 20


state 45
	tipoArray : tipoArray '[' LITERALINT ']' .  (21)

	.  reduce 21


state 46
	decfuncion : FUNCTION IDENT '(' . parametosfunc ')' AS tipo cuerpofuncion ENDFUNCTION  (13)
	parametosfunc : .  (15)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	VOID  shift 13
	')'  reduce 15

	tipo  goto 48
	parametosfunc  goto 49
	listaparam  goto 50


state 47
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' . ')' listaSentencias ENDMAIN  (1)

	')'  shift 51
	.  error


state 48
	listaparam : tipo . identifierList  (16)

	IDENT  shift 23
	'['  shift 24
	.  error

	identifierList  goto 52
	tipoArray  goto 26


state 49
	decfuncion : FUNCTION IDENT '(' parametosfunc . ')' AS tipo cuerpofuncion ENDFUNCTION  (13)

	')'  shift 53
	.  error


state 50
	parametosfunc : listaparam .  (14)

	.  reduce 14


state 51
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' . listaSentencias ENDMAIN  (1)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 56
	NOT  shift 57
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	READ  shift 61
	WRITE  shift 62
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	listaSentencias  goto 66
	sentencia  goto 67
	condicional  goto 68
	bucle  goto 69
	print  goto 70
	asignacion  goto 71
	retorno  goto 72
	expresion  goto 73


state 52
	listaparam : tipo identifierList .  (16)
	identifierList : identifierList . ',' IDENT  (19)
	identifierList : identifierList . ',' tipoArray IDENT  (20)

	','  shift 31
	')'  reduce 16


state 53
	decfuncion : FUNCTION IDENT '(' parametosfunc ')' . AS tipo cuerpofuncion ENDFUNCTION  (13)

	AS  shift 74
	.  error


state 54
	expresion : LITERALREAL .  (71)

	.  reduce 71


state 55
	expresion : LITERALINT .  (72)

	.  reduce 72


state 56
	sentencia : IDENT . '(' listaExpresionOpcional ')' ';'  (40)
	expresion : IDENT . '(' listaExpresionOpcional ')'  (66)
	expresion : IDENT .  (74)

	'('  shift 75
	LOWERTHAN  reduce 74
	GREATERTHAN  reduce 74
	GREATEREQUALS  reduce 74
	LOWEREQUALS  reduce 74
	EQUALS  reduce 74
	NOTEQUALS  reduce 74
	AND  reduce 74
	OR  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'['  reduce 74
	'.'  reduce 74
	'='  reduce 74


state 57
	expresion : NOT . expresion  (67)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 77


state 58
	bucle : WHILE . '(' expresion ')' sentenciasOpcionales ENDWHILE  (45)

	'('  shift 78
	.  error


state 59
	condicional : IF . '(' expresion ')' THEN sentenciasOpcionales ENDIF  (46)
	condicional : IF . '(' expresion ')' THEN sentenciasOpcionales ELSE sentenciasOpcionales ENDIF  (47)

	'('  shift 79
	.  error


state 60
	retorno : RETURN . '(' expresion ')' ';'  (42)

	'('  shift 80
	.  error


state 61
	print : READ . '(' ListaExpresion ')' ';'  (44)

	'('  shift 81
	.  error


state 62
	sentencia : WRITE . '(' ListaExpresion ')' ';'  (38)

	'('  shift 82
	.  error


state 63
	expresion : CHAR .  (73)

	.  reduce 73


state 64
	expresion : '-' . expresion  (63)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 83


state 65
	expresion : '(' . tipo ')' expresion  (70)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	VOID  shift 13
	.  error

	tipo  goto 84


state 66
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias . ENDMAIN  (1)
	listaSentencias : listaSentencias . sentencia  (33)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 56
	NOT  shift 57
	ENDMAIN  shift 85
	WHILE  shift 58
	IF  shift 59
	RETURN  shift 60
	READ  shift 61
	WRITE  shift 62
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	sentencia  goto 86
	condicional  goto 68
	bucle  goto 69
	print  goto 70
	asignacion  goto 71
	retorno  goto 72
	expresion  goto 73


state 67
	listaSentencias : sentencia .  (34)

	.  reduce 34


state 68
	sentencia : condicional .  (35)

	.  reduce 35


state 69
	sentencia : bucle .  (36)

	.  reduce 36


state 70
	sentencia : print .  (37)

	.  reduce 37


state 71
	sentencia : asignacion .  (39)

	.  reduce 39


state 72
	sentencia : retorno .  (41)

	.  reduce 41


state 73
	asignacion : expresion . '=' expresion ';'  (43)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '*' expresion  (54)
	expresion : expresion . '/' expresion  (55)
	expresion : expresion . '%' expresion  (56)
	expresion : expresion . GREATERTHAN expresion  (57)
	expresion : expresion . LOWERTHAN expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . NOTEQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	expresion : expresion . GREATEREQUALS expresion  (64)
	expresion : expresion . LOWEREQUALS expresion  (65)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '.' IDENT  (69)

	LOWERTHAN  shift 87
	GREATERTHAN  shift 88
	GREATEREQUALS  shift 89
	LOWEREQUALS  shift 90
	EQUALS  shift 91
	NOTEQUALS  shift 92
	AND  shift 93
	OR  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'%'  shift 99
	'['  shift 100
	'.'  shift 101
	'='  shift 102
	.  error


state 74
	decfuncion : FUNCTION IDENT '(' parametosfunc ')' AS . tipo cuerpofuncion ENDFUNCTION  (13)

	INTEGER  shift 9
	REAL  shift 10
	CHARACTER  shift 11
	STRUCT  shift 12
	VOID  shift 13
	.  error

	tipo  goto 103


state 75
	sentencia : IDENT '(' . listaExpresionOpcional ')' ';'  (40)
	expresion : IDENT '(' . listaExpresionOpcional ')'  (66)
	listaExpresionOpcional : .  (49)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	')'  reduce 49

	ListaExpresion  goto 104
	listaExpresionOpcional  goto 105
	expresion  goto 106


state 76
	expresion : IDENT . '(' listaExpresionOpcional ')'  (66)
	expresion : IDENT .  (74)

	'('  shift 107
	LOWERTHAN  reduce 74
	GREATERTHAN  reduce 74
	GREATEREQUALS  reduce 74
	LOWEREQUALS  reduce 74
	EQUALS  reduce 74
	NOTEQUALS  reduce 74
	AND  reduce 74
	OR  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'['  reduce 74
	']'  reduce 74
	'.'  reduce 74
	')'  reduce 74
	';'  reduce 74
	','  reduce 74
	'='  reduce 74


state 77
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '*' expresion  (54)
	expresion : expresion . '/' expresion  (55)
	expresion : expresion . '%' expresion  (56)
	expresion : expresion . GREATERTHAN expresion  (57)
	expresion : expresion . LOWERTHAN expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . NOTEQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	expresion : expresion . GREATEREQUALS expresion  (64)
	expresion : expresion . LOWEREQUALS expresion  (65)
	expresion : NOT expresion .  (67)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '.' IDENT  (69)

	'.'  shift 101
	LOWERTHAN  reduce 67
	GREATERTHAN  reduce 67
	GREATEREQUALS  reduce 67
	LOWEREQUALS  reduce 67
	EQUALS  reduce 67
	NOTEQUALS  reduce 67
	AND  reduce 67
	OR  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'['  reduce 67
	']'  reduce 67
	')'  reduce 67
	';'  reduce 67
	','  reduce 67
	'='  reduce 67


state 78
	bucle : WHILE '(' . expresion ')' sentenciasOpcionales ENDWHILE  (45)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 108


state 79
	condicional : IF '(' . expresion ')' THEN sentenciasOpcionales ENDIF  (46)
	condicional : IF '(' . expresion ')' THEN sentenciasOpcionales ELSE sentenciasOpcionales ENDIF  (47)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 109


state 80
	retorno : RETURN '(' . expresion ')' ';'  (42)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 110


state 81
	print : READ '(' . ListaExpresion ')' ';'  (44)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	ListaExpresion  goto 111
	expresion  goto 106


state 82
	sentencia : WRITE '(' . ListaExpresion ')' ';'  (38)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	ListaExpresion  goto 112
	expresion  goto 106


state 83
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '*' expresion  (54)
	expresion : expresion . '/' expresion  (55)
	expresion : expresion . '%' expresion  (56)
	expresion : expresion . GREATERTHAN expresion  (57)
	expresion : expresion . LOWERTHAN expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . NOTEQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	expresion : '-' expresion .  (63)
	expresion : expresion . GREATEREQUALS expresion  (64)
	expresion : expresion . LOWEREQUALS expresion  (65)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '.' IDENT  (69)

	'.'  shift 101
	LOWERTHAN  reduce 63
	GREATERTHAN  reduce 63
	GREATEREQUALS  reduce 63
	LOWEREQUALS  reduce 63
	EQUALS  reduce 63
	NOTEQUALS  reduce 63
	AND  reduce 63
	OR  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'['  reduce 63
	']'  reduce 63
	')'  reduce 63
	';'  reduce 63
	','  reduce 63
	'='  reduce 63


state 84
	expresion : '(' tipo . ')' expresion  (70)

	')'  shift 113
	.  error


state 85
	program : TYPES dectypes GLOBALS decvariables PROCEDURES decfunciones MAIN '(' ')' listaSentencias ENDMAIN .  (1)

	.  reduce 1


state 86
	listaSentencias : listaSentencias sentencia .  (33)

	.  reduce 33


state 87
	expresion : expresion LOWERTHAN . expresion  (58)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 114


state 88
	expresion : expresion GREATERTHAN . expresion  (57)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 115


state 89
	expresion : expresion GREATEREQUALS . expresion  (64)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 116


state 90
	expresion : expresion LOWEREQUALS . expresion  (65)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 117


state 91
	expresion : expresion EQUALS . expresion  (59)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 118


state 92
	expresion : expresion NOTEQUALS . expresion  (60)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 119


state 93
	expresion : expresion AND . expresion  (61)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 120


state 94
	expresion : expresion OR . expresion  (62)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 121


state 95
	expresion : expresion '+' . expresion  (52)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 122


state 96
	expresion : expresion '-' . expresion  (53)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 123


state 97
	expresion : expresion '*' . expresion  (54)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 124


state 98
	expresion : expresion '/' . expresion  (55)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 125


state 99
	expresion : expresion '%' . expresion  (56)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 126


state 100
	expresion : expresion '[' . expresion ']'  (68)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 127


state 101
	expresion : expresion '.' . IDENT  (69)

	IDENT  shift 128
	.  error


state 102
	asignacion : expresion '=' . expresion ';'  (43)

	LITERALREAL  shift 54
	LITERALINT  shift 55
	IDENT  shift 76
	NOT  shift 57
	CHAR  shift 63
	'-'  shift 64
	'('  shift 65
	.  error

	expresion  goto 129


state 103
	decfuncion : FUNCTION IDENT '(' parametosfunc ')' AS tipo . cuerpofuncion ENDFUNCTION  (13)
	defvariablesLocales : .  (30)

	.  reduce 30

	cuerpofuncion  goto 130
	defvariablesLocales  goto 131


state 104
	listaExpresionOpcional : ListaExpresion .  (48)
	ListaExpresion : ListaExpresion . ',' expresion  (50)

	','  shift 132
	')'  reduce 48


state 105
	sentencia : IDENT '(' listaExpresionOpcional . ')' ';'  (40)
	expresion : IDENT '(' listaExpresionOpcional . ')'  (66)

	')'  shift 133
	.  error

